--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.0.0",
     "@nestjs/schedule": "^4.0.1",
+    "@nestjs/terminus": "^10.2.3",
     "@nestjs/typeorm": "^10.0.1",
     "@types/cron": "^2.4.0",
     "class-transformer": "^0.5.1",
