--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "db:migrate:revert": "npm run typeorm migration:revert"
   },
   "dependencies": {
+    "@nestjs/axios": "^3.0.2",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^3.1.1",
     "@nestjs/core": "^10.0.0",
